--- a/index.css
+++ b/index.css
@@ -1,28 +1,29 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
     background-image: url("table.png");
     background-size: cover;
-    background-repeat: no-repeat;
-    text-align: center;
-    color: white;
     font-weight: bold;
+    color: white;
+    text-align: center;
 }
 
-h1{
+h1 {
     color: goldenrod;
 }
 
-#message-el{
+#message-el {
     font-style: italic;
 }
 
-button{
+button {
     color: #016f32;
     width: 150px;
     background: goldenrod;
+    padding-top: 5px;
+    padding-bottom: 5px;
     font-weight: bold;
     border: none;
-    padding: 5px 0;
     border-radius: 2px;
-    margin: 2px 0;
+    margin-bottom: 2px;
+    margin-top: 2px;
 }
